@@ -178,41 +178,75 @@ gradle.taskGraph.whenReady({ graph ->
         jvmArgs += [
                 "--add-opens=java.base/java.io=ALL-UNNAMED",
                 "--add-opens=java.base/java.lang=ALL-UNNAMED",
-                "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.annotation=ALL-UNNAMED",
                 "--add-opens=java.base/java.lang.module=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
                 "--add-opens=java.base/java.math=ALL-UNNAMED",
                 "--add-opens=java.base/java.net=ALL-UNNAMED",
                 "--add-opens=java.base/java.nio=ALL-UNNAMED",
                 "--add-opens=java.base/java.nio.channels=ALL-UNNAMED",
                 "--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio.file.attribute=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio.file.spi=ALL-UNNAMED",
+                "--add-opens=java.base/java.security=ALL-UNNAMED",
                 "--add-opens=java.base/java.text=ALL-UNNAMED",
+                "--add-opens=java.base/java.time=ALL-UNNAMED",
+                "--add-opens=java.base/java.time.chrono=ALL-UNNAMED",
+                "--add-opens=java.base/java.time.format=ALL-UNNAMED",
+                "--add-opens=java.base/java.time.temporal=ALL-UNNAMED",
+                "--add-opens=java.base/java.time.zone=ALL-UNNAMED",
                 "--add-opens=java.base/java.util=ALL-UNNAMED",
                 "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
                 "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
                 "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
+                "--add-opens=java.base/java.util.jar=ALL-UNNAMED",
+                "--add-opens=java.base/java.util.regex=ALL-UNNAMED",
+                "--add-opens=java.base/java.util.zip=ALL-UNNAMED",
                 "--add-opens=java.base/javax.net.ssl=ALL-UNNAMED",
                 "--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED",
                 "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
                 "--add-opens=java.base/jdk.internal.module=ALL-UNNAMED",
+                "--add-opens=java.base/jdk.internal.platform=ALL-UNNAMED",
                 "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
                 "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED",
                 "--add-opens=java.base/jdk.internal.util.jar=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.factory=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.repository=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.scope=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.tree=ALL-UNNAMED",
+                "--add-opens=java.base/sun.net.www=ALL-UNNAMED",
+                "--add-opens=java.base/sun.net.www.protocol.file=ALL-UNNAMED",
+                "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED",
                 "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+                "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+                "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.factory=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.repository=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.scope=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.tree=ALL-UNNAMED",
+                "--add-opens=java.base/sun.security.util=ALL-UNNAMED",
                 "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED",
                 "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
                 "--add-opens=java.base/sun.util.locale=ALL-UNNAMED",
                 "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
+                "--add-opens=java.management/javax.management=ALL-UNNAMED",
+                "--add-opens=java.management/javax.management.openmbean=ALL-UNNAMED",
+                "--add-opens=java.management/sun.management=ALL-UNNAMED",
                 "--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED",
                 "--add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED",
                 "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
 
-                "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-                "--add-exports=java.base/sun.reflect.generics.repository=ALL-UNNAMED",
                 "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
                 "--add-exports=java.management/com.sun.jmx.remote.security=ALL-UNNAMED",
         ]
 
         if (System.getProperty("os.name").startsWith('Linux')) {
+          jvmArgs += "--add-opens=java.base/jdk.internal.platform=ALL-UNNAMED"
           jvmArgs += "--add-opens=java.base/jdk.internal.platform.cgroupv1=ALL-UNNAMED"
         }
         if(testJVMVer.toInteger() >= 17) {
